# mendel-algorithmization

./: CMakeLists.txt  file_exercise.cpp  output_format.cpp  params.cpp
data_files/: cars.txt  casopis.txt  employee_test_exercise.txt  employees.txt
data_structures/: balanced_binary_tree.cpp  binary_search_tree.cpp  binary_tree.cpp  hash_table.cpp  linked_list.cpp  struct_application.cpp
exercise_03/: exercise_03_04.cpp  exercise_03_08.cpp  exercise_03_09.cpp  exercise_03_10.cpp  exercise_03_11.cpp  exercise_03_12.cpp  exercise_03_16.cpp  exercise_03_17.cpp
pre-test_exercises/: exercise_01.cpp  exercise_02.cpp  pre_test_exercise_03.cpp
worksheet_03/: exercise_03_01.cpp  exercise_03_02.cpp  exercise_03_03.cpp  exercise_03_05.cpp  exercise_03_06.cpp  exercise_03_07.cpp  exercise_03_13.cpp  exercise_03_14.cpp  exercise_03_15.cpp  exercise_03_18.cpp  exercise_03_19.cpp  exercise_03_20.cpp  exercise_03_21.cpp
worksheet_04/: exercise_04_13.cpp  exercise_04_17.cpp  exercise_04_18.cpp
worksheet_10/: exercise_10_01.cpp  exercise_10_02.cpp  exercise_10_03.cpp  exercise_10_04.cpp  exercise_10_05.cpp  exercise_10_06.cpp  exercise_10_07.cpp  exercise_10_08.cpp
