cmake_minimum_required(VERSION 3.26)
project(mendelu_algorithmization)

set(CMAKE_CXX_STANDARD 17)


add_executable(3.04 worksheet_03/exercise_03_04.cpp)
add_executable(3.05 worksheet_03/exercise_03_05.cpp)
add_executable(3.06 worksheet_03/exercise_03_06.cpp)
add_executable(3.07 worksheet_03/exercise_03_07.cpp)
add_executable(3.08 worksheet_03/exercise_03_08.cpp)
add_executable(3.09 worksheet_03/exercise_03_09.cpp)
add_executable(3.10 worksheet_03/exercise_03_10.cpp)
add_executable(3.11 worksheet_03/exercise_03_11.cpp)
add_executable(3.12 worksheet_03/exercise_03_12.cpp)
add_executable(3.13 worksheet_03/exercise_03_13.cpp)
add_executable(3.14 worksheet_03/exercise_03_14.cpp)
add_executable(3.15 worksheet_03/exercise_03_15.cpp)
add_executable(3.16 worksheet_03/exercise_03_16.cpp)
add_executable(3.17 worksheet_03/exercise_03_17.cpp)
add_executable(3.18 worksheet_03/exercise_03_18.cpp)
add_executable(3.19 worksheet_03/exercise_03_19.cpp)
add_executable(3.20 worksheet_03/exercise_03_20.cpp)
add_executable(3.21 worksheet_03/exercise_03_21.cpp)
add_executable(3.01 worksheet_03/exercise_03_01.cpp)
add_executable(3.02 worksheet_03/exercise_03_02.cpp)
add_executable(3.03 worksheet_03/exercise_03_03.cpp)
