cmake_minimum_required(VERSION 3.26)
project(mendelu_algorithmization)

set(CMAKE_CXX_STANDARD 17)


add_executable(03.01 worksheet_03/exercise_03_01.cpp)
add_executable(03.02 worksheet_03/exercise_03_02.cpp)
add_executable(03.03 worksheet_03/exercise_03_03.cpp)
add_executable(03.04 worksheet_03/exercise_03_04.cpp)
add_executable(03.05 worksheet_03/exercise_03_05.cpp)
add_executable(03.06 worksheet_03/exercise_03_06.cpp)
add_executable(03.07 worksheet_03/exercise_03_07.cpp)
add_executable(03.08 worksheet_03/exercise_03_08.cpp)
add_executable(03.09 worksheet_03/exercise_03_09.cpp)
add_executable(03.10 worksheet_03/exercise_03_10.cpp)
add_executable(03.11 worksheet_03/exercise_03_11.cpp)
add_executable(03.12 worksheet_03/exercise_03_12.cpp)
add_executable(03.13 worksheet_03/exercise_03_13.cpp)
add_executable(03.14 worksheet_03/exercise_03_14.cpp)
add_executable(03.15 worksheet_03/exercise_03_15.cpp)
add_executable(03.16 worksheet_03/exercise_03_16.cpp)
add_executable(03.17 worksheet_03/exercise_03_17.cpp)
add_executable(03.18 worksheet_03/exercise_03_18.cpp)
add_executable(03.19 worksheet_03/exercise_03_19.cpp)
add_executable(03.20 worksheet_03/exercise_03_20.cpp)
add_executable(03.21 worksheet_03/exercise_03_21.cpp)

add_executable(04.13 worksheet_04/exercise_04_13.cpp)
add_executable(04.17 worksheet_04/exercise_04_17.cpp)
add_executable(04.18 worksheet_04/exercise_04_18.cpp)

add_executable(10.04 worksheet_10/exercise_10_04.cpp)
