cmake_minimum_required(VERSION 3.26)
project(mendelu_algorithmization)

set(CMAKE_CXX_STANDARD 17)


add_executable(03.01 worksheet_03/exercise_03_01.cpp)
add_executable(03.02 worksheet_03/exercise_03_02.cpp)
add_executable(03.03 worksheet_03/exercise_03_03.cpp)
add_executable(03.04 worksheet_03/exercise_03_04.cpp)
add_executable(03.05 worksheet_03/exercise_03_05.cpp)
add_executable(03.06 worksheet_03/exercise_03_06.cpp)
add_executable(03.07 worksheet_03/exercise_03_07.cpp)
add_executable(03.08 worksheet_03/exercise_03_08.cpp)
add_executable(03.09 worksheet_03/exercise_03_09.cpp)
add_executable(03.10 worksheet_03/exercise_03_10.cpp)
add_executable(03.11 worksheet_03/exercise_03_11.cpp)
add_executable(03.12 worksheet_03/exercise_03_12.cpp)
add_executable(03.13 worksheet_03/exercise_03_13.cpp)
add_executable(03.14 worksheet_03/exercise_03_14.cpp)
add_executable(03.15 worksheet_03/exercise_03_15.cpp)
add_executable(03.16 worksheet_03/exercise_03_16.cpp)
add_executable(03.17 worksheet_03/exercise_03_17.cpp)
add_executable(03.18 worksheet_03/exercise_03_18.cpp)
add_executable(03.19 worksheet_03/exercise_03_19.cpp)
add_executable(03.20 worksheet_03/exercise_03_20.cpp)
add_executable(03.21 worksheet_03/exercise_03_21.cpp)

add_executable(04.13 worksheet_04/exercise_04_13.cpp)
add_executable(04.17 worksheet_04/exercise_04_17.cpp)
add_executable(04.18 worksheet_04/exercise_04_18.cpp)

add_executable(10.04 worksheet_10/exercise_10_04.cpp
        worksheet_10/exercise_10_07.cpp)
add_executable(10.05 worksheet_10/exercise_10_05.cpp)
add_executable(10.06 worksheet_10/exercise_10_06.cpp)
add_executable(10.07 worksheet_10/exercise_10_07.cpp)
add_executable(10.08 worksheet_10/exercise_10_08.cpp)
add_executable(file_exercise file_exercise.cpp)
add_executable(linked_list data_structures/linked_list.cpp)
add_executable(hash_table data_structures/hash_table.cpp)
add_executable(balanced_binary_tree data_structures/balanced_binary_tree.cpp)
add_executable(pre_test_exercise_01 pre-test_exercises/exercise_01.cpp)
add_executable(pre_test_exercise_02 pre-test_exercises/exercise_02.cpp)
add_executable(binary_tree data_structures/binary_tree.cpp)
add_executable(binary_search_tree data_structures/binary_search_tree.cpp)
add_executable(params params.cpp)
add_executable(output_format output_format.cpp)
add_executable(struct_application data_structures/struct_application.cpp)
add_executable(pre_test_exercise_03 pre-test_exercises/pre_test_exercise_03.cpp)
add_executable(10.01 worksheet_10/exercise_10_01.cpp)
add_executable(10.02 worksheet_10/exercise_10_02.cpp)
add_executable(10.03 worksheet_10/exercise_10_03.cpp)
